--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         }
         .corner-image {
             position: absolute;
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             border-radius: 0px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
@@ -30,7 +30,7 @@
         }
         h1 {
             color: red;
-            font-size: 2.5em;
+            font-size: 2em; /* Reduced font size */
             animation: heartbeat 1.5s infinite;
         }
         .image-container {
@@ -38,7 +38,7 @@
             display: inline-block;
         }
         .image-container img {
-            width: 250px;
+            width: 200px; /* Reduced GIF size */
             height: auto;
             border-radius: 15px;
             margin: 20px;
@@ -46,8 +46,8 @@
             animation: float 3s infinite ease-in-out;
         }
         .buttons button {
-            font-size: 20px;
-            padding: 10px 20px;
+            font-size: 18px; /* Reduced button font size */
+            padding: 8px 16px;
             margin: 10px;
             border: none;
             border-radius: 0px;
@@ -60,7 +60,7 @@
         .absolutely:hover { background-color: #e6b800; transform: scale(1.1); }
         .hidden {
             display: none;
-            font-size: 1.8em;
+            font-size: 1.5em;
             color: red;
             margin-top: 20px;
             animation: fadeIn 1.5s ease-in-out;
@@ -82,7 +82,7 @@
         <div class="image-container">
             <img src="https://tenor.com/view/please-gif-6115078344733356394.gif" alt="Cute GIF">
         </div>
-        <h1 style="font-family: 'Dancing Script', cursive; font-size: 3em; color: #ff3366; animation: floatText 3s infinite ease-in-out;">My Dearest Wainn, Will You Make My Heart The Happiest By Being My Valentine? 💖</h1>
+        <h1 style="font-family: 'Dancing Script', cursive; font-size: 2em; color: #ff3366; animation: floatText 3s infinite ease-in-out;">My Dearest Wainn, Will You Make My Heart The Happiest By Being My Valentine? 💖</h1>
         <div class="buttons">
             <button class="yes" onclick="showLove('yes')">Yes</button>
             <button class="absolutely" onclick="showLove('absolutely')">Absolutely Yes!</button>
@@ -109,3 +109,4 @@
     </script>
 </body>
 </html>
+
