--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="image-container">
             <img id="main-gif" src="https://tenor.com/view/please-gif-6115078344733356394.gif" alt="Cute GIF">
         </div>
-        <h1 style="font-family: 'Dancing Script', cursive; font-size: 1.8em; color: #ff3366; animation: floatText 3s infinite ease-in-out;">My Dearest Wainn, Will You Be My Valentine? 💖</h1>
+        <h1 style="font-family: 'Dancing Script', cursive; font-size: 1.8em; color: #ff3366; animation: floatText 3s infinite ease-in-out;">My Dearest Wine, Will You Be My Valentine? 💖</h1>
         <div class="buttons">
             <button class="yes" onclick="showLove('yes')">Yes</button>
             <button class="absolutely" onclick="showLove('absolutely')">Absolutely Yes!</button>
